# surrealdb-benchmark

./: .gitignore  README.md  dev.ipynb  pnpm-lock.yaml  pnpm-workspace.yaml
benchmark-ts/: README.md  bun.lockb  csv.ts  index.ts
sqlite-benchmark-rs/: .gitignore  Cargo.toml
sqlite-benchmark-rs/src/: main.rs
