[package]
name = "sqlite-benchmark-rs"
version = "0.1.0"
edition = "2021"

default-run = "surreal"

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
csv = "1.2"
anyhow = "1.0"
surrealdb = { version = "2.1.3", features = ["kv-rocksdb"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
