[package]
name = "sqlite-benchmark-rs"
version = "0.1.0"
edition = "2021"

default-run = "surreal"

[dependencies]
rusqlite = { version = "0.34.0", features = ["bundled"] }
csv = "1.3.1"
anyhow = "1.0"
surrealdb = { version = "2.2.1", features = ["kv-rocksdb"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
